styles/globals.scss
html,
body,
* {
    padding: 0;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    box-sizing: border-box;
}
::-webkit-scrollbar {
    width: 0px;
}

a {
    color: inherit;
    text-decoration: none;
}

:root {
    --products-heading-color: #324d67;
    --products-p-color: #5f5f5f;

    --heroBanner-bgcolor: #dcdcdc;
    --heroBanner-button-bgcolor: #f02d34;
    --heroBanner-button-color: white;
    --heroBanner-headlight-color: white;

    --product-image-bg-color: #ebebeb;
    --produkt-price-color: black;
}

.layout {
    padding: 10px;

    .main-container {
        max-width: 1400px;
        margin: auto;
        width: 100%;
    }
}

.navbar-container {
    display: flex;
    justify-content: space-between;
    margin: 6px 18px;
    position: relative;

    .logo {
        color: gray;
        font-size: 18px;
    }

    .cart-icon {
        font-size: 25px;
        color: gray;
        cursor: pointer;
        position: relative;
        transition: transform 0.4s ease;
        border: none;
        background-color: transparent;

        .cart-item-qty {
            position: absolute;
            right: -8px;
            font-size: 12px;
            color: #eee;
            background-color: #f02d34;
            width: 18px;
            height: 18px;
            border-radius: 50%;
            text-align: center;
            font-weight: 600;
        }
    }

    .cart-icon:hover {
        transform: scale(1.1, 1.1);
    }
}

.products-heading {
    text-align: center;
    margin: 40px 0px;
    color: var(--products-heading-color);

    h2 {
        font-size: 40px;
        font-weight: 800;
    }

    p {
        font-size: 16px;
        font-weight: 200;
    }
}

.products-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 15px;
    margin-top: 20px;
    width: 100%;
}

.product-card {
    cursor: pointer;
    transform: scale(1, 1);
    transition: transform 0.5s ease;
    color: var(--products-heading-color);

    .product-image {
        border-radius: 15px;
        background-color: var(--product-image-bg-color);
        transform: scale(1, 1);
        transition: transform 0.5s ease;
    }

    .product-name {
        font-weight: 500;
    }
    .product-price {
        font-weight: 800;
        margin-top: 6px;
        color: var(--produkt-price-color);
    }
}
.product-card:hover {
    transform: scale(1.1, 1.1);
}

.footer-banner-container {
    padding: 100px 40px;
    background-color: #f02d34;
    border-radius: 15px;
    position: relative;
    height: fit-content;
    line-height: 1;
    color: white;
    width: 100%;
    margin-top: 120px;

    .banner-desc {
        display: flex;
        flex-wrap: wrap;

        justify-content: space-between;

        .left h3 {
            font-weight: 900;
            font-size: 80px;
            margin-left: 25px;
        }

        .left p {
            margin: 18px;
        }

        .right {
            line-height: 1.4;

            h3 {
                font-weight: 800;
                font-size: 60px;
            }

            p {
                font-size: 18px;
            }
        }

        button {
            border-radius: 15px;
            padding: 10px 16px;
            background-color: white;
            color: red;
            border: none;
            margin-top: 40px;
            font-size: 18px;
            font-weight: 500;
            cursor: pointer;
        }

        .footer-banner-image {
            position: absolute;
            max-width: 500px;
            max-height: 500px;
            top: -25%;
            left: 25%;
        }
    }
}

.hero-banner-container {
    padding: 100px 40px;
    background-color: var(--heroBanner-bgcolor);
    border-radius: 15px;
    position: relative;
    height: 550px;
    line-height: 0.9;
    width: 100%;

    .hero-banner-upper-text {
        font-size: 20px;
        z-index: 10000 !important;
    }

    h3 {
        font-size: 4rem;
        margin-top: 4px;
    }
    h1 {
        color: var(--heroBanner-headlight-color);
        font-size: 10em;
        margin-left: -20px;
        text-transform: uppercase;
    }

    .hero-banner-image {
        position: absolute;
        top: 0%;
        right: 20%;
        width: 450px;
        height: 450px;
    }

    button {
        border-radius: 15px;
        padding: 10px 16px;
        background-color: var(--heroBanner-button-bgcolor);
        color: var(--heroBanner-button-color);
        border: none;
        margin-top: 40px;
        font-size: 18px;
        font-weight: 500;
        cursor: pointer;
        z-index: 500 !important;
    }

    .desc {
        position: absolute;
        right: 10%;
        bottom: 5%;
        width: 300px;
        line-height: 1.3;
        display: flex;
        flex-direction: column;
        color: var(--products-heading-color);

        h5 {
            margin-bottom: 12px;
            font-weight: 700;
            font-size: 16px;
            align-self: flex-end;
        }

        p {
            color: var(--products-p-color);
            font-weight: 100;
            text-align: end;
        }
    }
}
/* ... */

